--- a/SmartConvert/app/src/main/AndroidManifest.xml
+++ b/SmartConvert/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="group6.tcss450.uw.edu.smartconvert">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
